# ldmx-analysis

cpp/: CMakeLists.txt
cpp/include/analyses/: ClusterAnalysis.h  HitAnalysis.h  LcioAbstractAnalysis.h  PhotoNuclearAnalysis.h  RecoilTrackerAnalysis.h  SignalAnalysis.h  TaggerTrackerAnalysis.h  TrackAnalysis.h
cpp/include/geant4/: GeantAnalysis.h  HydrogenEcalActionInitialization.h  HydrogenEcalDetectorConstruction.h  HydrogenEcalRunAction.h  HydrogenEcalSteppingAction.h  SimpleLdmxEcalActionInitialization.h  SimpleLdmxEcalDetectorConstruction.h  SimpleLdmxEcalPrimaryGeneratorAction.h  SimpleLdmxEcalSteppingAction.h
cpp/include/utils/: FlatTupleMaker.h  Plotter.h  TrackExtrapolator.h  TrackUtils.h
cpp/src/analyses/: CMakeLists.txt  ClusterAnalysis.cxx  HitAnalysis.cxx  LcioAbstractAnalysis.cxx  PhotoNuclearAnalysis.cxx  RecoilTrackerAnalysis.cxx  SignalAnalysis.cxx  TaggerTrackerAnalysis.cxx  TrackAnalysis.cxx
cpp/src/geant4/: CMakeLists.txt  HydrogenEcalActionInitialization.cxx  HydrogenEcalDetectorConstruction.cxx  HydrogenEcalRunAction.cxx  HydrogenEcalSteppingAction.cxx  LeadCalorimeterSteppingAction.cxx  SimpleLdmxEcalActionInitialization.cxx  SimpleLdmxEcalDetectorConstruction.cxx  SimpleLdmxEcalPrimaryGeneratorAction.cxx  SimpleLdmxEcalSteppingAction.cxx  hydrogen_ecal.cxx  simple_ldmx_ecal.cxx
cpp/src/utils/: CMakeLists.txt  FlatTupleMaker.cxx  Plotter.cxx  TrackExtrapolator.cxx  TrackUtils.cxx  lcio_analyzer.cxx
python/analysis/: PhotoNuclearAnalysis.py  RecoilTrackerAnalysis.py  SignalAnalysis.py  TaggerTrackerAnalysis.py  ldmxpy.py
python/nb/: geant4_validation_studies.ipynb  ldmx_recoil_tracker_signal_studies.ipynb  ldmx_target_trigger_pad_pn_studies.ipynb
